--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="container">
         <p class="enter-text">Oe perlltxe hu tsamsiyu!Ngari hu Eywa salew tirea, tokx 'ì'awn slu Na'viyä hapxì.Säwem nìayoeng!</p>
         <p class="enter-text">Хоробрий воїне, звертаюсь до тебе!Твій дух йде з Ейвою, твоє тіло залишається, щоб стати частиною Народу.Борись разом з нами!</p>
-     <button type button class="buttonstyle">Приєднатись до клану</button>
+     <button class="buttonstyle">Приєднатись до клану</button>
      <ul class="icons-list">
         <li class="icons-item">
             <a href="https://www.instagram.com/sem/campaign/emailsignup/?campaign_id=13560899670&extra_1=s%7Cc%7C547348927144%7Ce%7Cinstagram%7C&placement=&creative=547348927144&keyword=instagram">
@@ -65,7 +65,7 @@
       <p class="author">Джейк Саллі</p>
      </div>
     </section>
-    <section>
+    <section class="trailer">
      <!-- трейлер -->
      <iframe width="100%" height="741px" src="https://www.youtube.com/embed/d9MyW72ELq0?si=qXxufSdXKk_6tq2N" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
      <button class="buttonstyle">Дивитися трейлер</button>
