--- a/index.html
+++ b/index.html
@@ -1,151 +1,191 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Avatar</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&family=Headland+One&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Hammersmith+One&family=Headland+One&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
     <header class="header">
-     <div class="container">
-         <a href="/" class="link">
-             <img src="./images/logo.png" alt="logo Avatar" class="logo">
-         </a>
-         <nav class="nav">
-            <ul class="nav-list">
-             <li class="nav-item">
-                <a href="#" class="nav-link">Головна</a>
-              </li>
-              <li class="nav-item">
-                <a href="#" class="nav-link">Про нас</a>
-              </li>
-              <li class="nav-item">
-                 <a href="#" class="nav-link">Контакти</a>
-              </li>
-           </ul>
-         </nav>
-         <button type="button" class="buttonstyle">Увійти</button>
-         <ul class="language-switcher">
-            <li class="language-switcher-item">
-                <p class="language-switcher-text">ENG</p>
+      <div class="container header-position">
+        <a href="/" class="link">
+          <img src="./images/logo.png" alt="logo Avatar" class="logo" />
+        </a>
+        <nav class="nav">
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a href="#" class="nav-link">Головна</a>
             </li>
-            <li class="language-switcher-item">
-                <a href="#">
-            <img src="./images/switcher.png" alt="button switch ukrainian to englisch">
-         </a>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Про нас</a>
             </li>
-            <li class="language-switcher-item">
-                <p class="language-switcher-text">UA</p>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Контакти</a>
             </li>
-         </ul>
-     </div>
+          </ul>
+        </nav>
+        <button type="button" class="buttonstyle">Увійти</button>
+      </div>
+      <ul class="language-switcher">
+          <li class="language-switcher-item">
+            <p class="language-switcher-text">ENG</p>
+          </li>
+          <li class="language-switcher-item">
+            <a href="#">
+              <img
+                src="./images/switcher.png"
+                alt="button switch ukrainian to englisch"
+              />
+            </a>
+          </li>
+          <li class="language-switcher-item">
+            <p class="language-switcher-text">UA</p>
+          </li>
+        </ul>
     </header>
     <main>
-        <!-- enter -->
-    <section class="enter">
-        <div class="container">
-        <p class="enter-text">Oe perlltxe hu tsamsiyu!Ngari hu Eywa salew tirea, tokx 'ì'awn slu Na'viyä hapxì.Säwem nìayoeng!</p>
-        <p class="enter-text">Хоробрий воїне, звертаюсь до тебе!Твій дух йде з Ейвою, твоє тіло залишається, щоб стати частиною Народу.Борись разом з нами!</p>
-     <button class="buttonstyle-join">Приєднатись до клану</button>
-     <ul class="icons-list">
-        <li class="icons-item">
-            <a href="https://www.instagram.com/sem/campaign/emailsignup/?campaign_id=13560899670&extra_1=s%7Cc%7C547348927144%7Ce%7Cinstagram%7C&placement=&creative=547348927144&keyword=instagram" target="_blank">
-                <img src="./images/inst.png" alt="icon of instagram">
-            </a>
-        </li>
-        <li class="icons-item">
-            <a href="https://x.com/?lang=ua" target="_blank">
-                <img src="./images/twitter.png" alt="icon of twitter">
-            </a>
-        </li>
-        <li class="icons-item">
-            <a href="https://www.youtube.com/" target="_blank">
-                <img src="./images/youtube.png" alt="icon of youtube">
-            </a>
-        </li>
-      </ul>
+      <!-- enter -->
+      <section class="enter">
+        <div class="container eneter-position">
+         <div class="clan">
+           <p class="enter-text-navi">
+            Oe perlltxe hu tsamsiyu! Ngari hu Eywa salew tirea, tokx 'ì'awn slu
+            Na'viyä hapxì. Säwem nìayoeng!
+           </p>
+           <p class="enter-text-ua">
+            Хоробрий воїне, звертаюсь до тебе!Твій дух йде з Ейвою, твоє тіло
+            залишається, щоб стати частиною Народу.Борись разом з нами!
+           </p>
+           <button class="buttonstyle-join">Приєднатись до клану</button>
+          </div>
+          <ul class="icons-list">
+            <li class="icons-item">
+              <a
+                href="https://www.instagram.com/sem/campaign/emailsignup/?campaign_id=13560899670&extra_1=s%7Cc%7C547348927144%7Ce%7Cinstagram%7C&placement=&creative=547348927144&keyword=instagram"
+                target="_blank"
+              >
+                <img src="./images/inst.png" alt="icon of instagram"  class="icon"/>
+              </a>
+            </li>
+            <li class="icons-item">
+              <a href="https://x.com/?lang=ua" target="_blank">
+                <img src="./images/twitter.png" alt="icon of twitter" class="icon"/>
+              </a>
+            </li>
+            <li class="icons-item">
+              <a href="https://www.youtube.com/" target="_blank">
+                <img src="./images/youtube.png" alt="icon of youtube" class="icon"/>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
       <section class="quote">
         <div class="container">
-      <p class="quote-text">“БАГАТО ЛЮДЕЙ З НЕБА ПРИЙДЕ. ВОНИ ПРИЙДУТЬ, ЯК ГРОЗА, ЯКА НІКОЛИ НЕ ЗАКІНЧУЄТЬСЯ.” </p>
-      <p class="author">Джейк Саллі</p>
-       </div> 
+          <p class="quote-text">
+            “БАГАТО ЛЮДЕЙ З НЕБА ПРИЙДЕ. ВОНИ ПРИЙДУТЬ, ЯК ГРОЗА, ЯКА НІКОЛИ НЕ
+            ЗАКІНЧУЄТЬСЯ.”
+          </p>
+          <p class="author">Джейк Саллі</p>
+        </div>
       </section>
-     </div>
-    </section>
-    <!-- trailer -->
-    <section class="trailer">
-     <div class="container">  
-        <a href="https://www.youtube.com/watch?v=d9MyW72ELq0&t=1s" target="_blank">
+      <!-- trailer -->
+      <section class="trailer">
+        <div class="container">
+          <a
+            href="https://www.youtube.com/watch?v=d9MyW72ELq0&t=1s"
+            target="_blank"
+          >
             <button class="buttonstyle-watch">Дивитися трейлер</button>
-        </a>
-     </div>
-     </section>
-     <section class="quote">
-      <div class="container">
-         <p class="quote-text">“ВСЯ ЕНЕРГІЯ ЛИШЕ ЗАПОЗИЧЕНА, ОДНОГО ДНЯ ДОВЕДЕТЬСЯ ПОВЕРНУТИ.”</p>
-         <p class="author">Джейк Саллі</p>
-      </div>
-     </section>
-     <section>
-     <div class="container">
-      <h2 class="translate">Вчимо мову На’ві</h2>
-       <ul class="translate-list">
-         <li class="translate-item">
-             <p class="translate-word">Привіт</p>
-             <p class="translate-result">Kaltxì</p>
-         </li>
-         <li class="translate-item">
-            <p class="translate-word">Як справи?</p>
-            <p class="translate-result">Ngaru lu fpom srak?</p>
-         </li>
-         <li class="translate-item">
-            <p class="translate-word">Все добре</p>
-            <p class="translate-result">Lu fpom</p>
-         </li>
-         <li class="translate-item">
-            <p class="translate-word">Дякую</p>
-            <p class="translate-result">Irayo si </p>
-         </li>
-         <li class="translate-item">
-            <p class="translate-word">Я бачу тебе</p>
-            <p class="translate-result">Oel ngati kameie</p>
-         </li>
-         <li class="translate-item">
-            <p class="translate-word">Слідуй за мною!</p>
-            <p class="translate-result">Nong oet!</p>
-         </li>
-       </ul>
-       <section class="quote">
-          <div class="container">
-            <p class="quote-text">“НАША ВЕЛИКА МАТИ НЕ СТАЄ НА ЯКУСЬ СТОРОНУ, ВОНА ЗАХИЩАЄ ЛИШЕ ЖИТТЄВИЙ БАЛАНС.”</p>
-            <p class="author">Нейтірі</p>
-          </div>
-       </section>
-      </div>
-     </section>
+          </a>
+        </div>
+      </section>
+      <section class="quote">
+        <div class="container">
+          <p class="quote-text">
+            “ВСЯ ЕНЕРГІЯ ЛИШЕ ЗАПОЗИЧЕНА, ОДНОГО ДНЯ ДОВЕДЕТЬСЯ ПОВЕРНУТИ.”
+          </p>
+          <p class="author">Джейк Саллі</p>
+        </div>
+      </section>
+      <section class="translate">
+        <div class="container">
+          <h2 class="translate-tile">Вчимо мову На’ві</h2>
+          <ul class="translate-list">
+            <li class="translate-item">
+              <p class="translate-word">Привіт</p>
+              <p class="translate-result">Kaltxì</p>
+            </li>
+            <li class="translate-item">
+              <p class="translate-word">Як справи?</p>
+
+              <p class="translate-result">Ngaru lu fpom srak?</p>
+            </li>
+            <li class="translate-item">
+              <p class="translate-word">Все добре</p>
+              <p class="translate-result">Lu fpom</p>
+            </li>
+            <li class="translate-item">
+              <p class="translate-word">Дякую</p>
+              <p class="translate-result">Irayo si</p>
+            </li>
+            <li class="translate-item">
+              <p class="translate-word">Я бачу тебе</p>
+              <p class="translate-result">Oel ngati kameie</p>
+            </li>
+            <li class="translate-item">
+              <p class="translate-word">Слідуй за мною!</p>
+              <p class="translate-result">Nong oet!</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="quote">
+        <div class="container">
+          <p class="quote-text">
+            “НАША ВЕЛИКА МАТИ НЕ СТАЄ НА ЯКУСЬ СТОРОНУ, ВОНА ЗАХИЩАЄ ЛИШЕ
+            ЖИТТЄВИЙ БАЛАНС.”
+          </p>
+          <p class="author">Нейтірі</p>
+        </div>
+      </section>
     </main>
-    <footer>
-      <div class="container">
-         <a href="/" class="link">
-              <img src="./images/logo.png" alt="logo Avatar" class="logo">
-         </a>
-            <ul class="contact-list">
-                <li class="contact-item">
-                     <p class="contact-text">Q&A E-mail</p>
-                     <a href="mailto:avatartwowqa@gmail.com" class="contact-link">avatartwowqa@gmail.com</a>
-                </li> 
-                <li class="contact-item">
-                     <p class="contact-text">Cooperation E-mail</p>
-                     <a href="mailto:avatartwowcoop@gmail.com" class="contact-link">avatartwowcoop@gmail.com</a>
-                </li> 
-            </ul>
-           <p>©2023 Avatar: The Way Of Water. All rights reserved</p>
+    <footer class="footer">
+      <div class="container footer-position">
+        <a href="/" class="link">
+          <img src="./images/logo.png" alt="logo Avatar" class="logo logo-footer" />
+        </a>
+        <ul class="contact-list">
+          <li class="contact-item">
+            <p class="contact-text">Q&A E-mail</p>
+            <a href="mailto:avatartwowqa@gmail.com" class="contact-link"
+              >avatartwowqa@gmail.com</a
+            >
+          </li>
+          <li class="contact-item">
+            <p class="contact-text">Cooperation E-mail</p>
+            <a href="mailto:avatartwowcoop@gmail.com" class="contact-link">avatartwowcoop@gmail.com</a>
+          </li>
+          <li class="contact-item">
+            <small class="info">©2023 Avatar: The Way Of Water. All rights reserved</small>
+          </li>
+        </ul>
+        
       </div>
     </footer>
-</body>
+  </body>
 </html>
