--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   </head>
   <body>
     <header class="header">
+      <div class="header-conaction">
       <div class="container header-position">
         <a href="/" class="link">
           <img src="./images/logo.png" alt="logo Avatar" class="logo" />
@@ -56,6 +57,7 @@
             <p class="language-switcher-text">UA</p>
           </li>
         </ul>
+      </div>
     </header>
     <main>
       <!-- enter -->
@@ -127,28 +129,28 @@
           <h2 class="translate-tile">Вчимо мову На’ві</h2>
           <ul class="translate-list">
             <li class="translate-item">
-              <p class="translate-word">Привіт</p>
+              <p class="translate-word group1">Привіт</p>
               <p class="translate-result">Kaltxì</p>
             </li>
             <li class="translate-item">
-              <p class="translate-word">Як справи?</p>
+              <p class="translate-word group2">Як справи?</p>
 
               <p class="translate-result">Ngaru lu fpom srak?</p>
             </li>
             <li class="translate-item">
-              <p class="translate-word">Все добре</p>
+              <p class="translate-word group3">Все добре</p>
               <p class="translate-result">Lu fpom</p>
             </li>
             <li class="translate-item">
-              <p class="translate-word">Дякую</p>
+              <p class="translate-word group1">Дякую</p>
               <p class="translate-result">Irayo si</p>
             </li>
             <li class="translate-item">
-              <p class="translate-word">Я бачу тебе</p>
+              <p class="translate-word group2">Я бачу тебе</p>
               <p class="translate-result">Oel ngati kameie</p>
             </li>
             <li class="translate-item">
-              <p class="translate-word">Слідуй за мною!</p>
+              <p class="translate-word group3">Слідуй за мною!</p>
               <p class="translate-result">Nong oet!</p>
             </li>
           </ul>
