--- a/index.html
+++ b/index.html
@@ -21,27 +21,26 @@
   </head>
   <body>
     <header class="header">
-      <div class="header-conaction">
-      <div class="container header-position">
-        <a href="/" class="link">
-          <img src="./images/logo.png" alt="logo Avatar" class="logo" />
-        </a>
-        <nav class="nav">
-          <ul class="nav-list">
-            <li class="nav-item">
-              <a href="#" class="nav-link">Головна</a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link">Про нас</a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link">Контакти</a>
-            </li>
-          </ul>
-        </nav>
-        <button type="button" class="buttonstyle">Увійти</button>
-      </div>
-      <ul class="language-switcher">
+        <div class="container header-position">
+          <a href="/" class="link">
+            <img src="./images/logo.png" alt="logo Avatar" class="logo logo-header" />
+          </a>
+          <nav class="nav">
+            <ul class="nav-list">
+              <li class="nav-item">
+                <a href="#" class="nav-link">Головна</a>
+              </li>
+              <li class="nav-item">
+                <a href="#" class="nav-link">Про нас</a>
+              </li>
+              <li class="nav-item">
+                <a href="#" class="nav-link">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+          <button type="button" class="buttonstyle">Увійти</button>
+        </div>
+        <ul class="language-switcher">
           <li class="language-switcher-item">
             <p class="language-switcher-text">ENG</p>
           </li>
@@ -57,40 +56,51 @@
             <p class="language-switcher-text">UA</p>
           </li>
         </ul>
-      </div>
     </header>
     <main>
       <!-- enter -->
       <section class="enter">
-        <div class="container eneter-position">
-         <div class="clan">
-           <p class="enter-text-navi">
-            Oe perlltxe hu tsamsiyu! Ngari hu Eywa salew tirea, tokx 'ì'awn slu
-            Na'viyä hapxì. Säwem nìayoeng!
-           </p>
-           <p class="enter-text-ua">
-            Хоробрий воїне, звертаюсь до тебе!Твій дух йде з Ейвою, твоє тіло
-            залишається, щоб стати частиною Народу.Борись разом з нами!
-           </p>
-           <button class="buttonstyle-join">Приєднатись до клану</button>
+        <div class="container enter-position">
+          <div class="clan">
+            <p class="enter-text-navi">
+              Oe perlltxe hu tsamsiyu! Ngari hu Eywa salew tirea, tokx 'ì'awn
+              slu Na'viyä hapxì. Säwem nìayoeng!
+            </p>
+            <p class="enter-text-ua">
+              Хоробрий воїне, звертаюсь до тебе!Твій дух йде з Ейвою, твоє тіло
+              залишається, щоб стати частиною Народу.Борись разом з нами!
+            </p>
+            <button class="buttonstyle-join">Приєднатись до клану</button>
           </div>
           <ul class="icons-list">
-            <li class="icons-item">
+            <li class="icons-item instagram-icon">
               <a
                 href="https://www.instagram.com/sem/campaign/emailsignup/?campaign_id=13560899670&extra_1=s%7Cc%7C547348927144%7Ce%7Cinstagram%7C&placement=&creative=547348927144&keyword=instagram"
                 target="_blank"
               >
-                <img src="./images/inst.png" alt="icon of instagram"  class="icon"/>
+                <img
+                  src="./images/inst.png"
+                  alt="icon of instagram"
+                  class="icon"
+                />
               </a>
             </li>
-            <li class="icons-item">
+            <li class="icons-item twitter-icon">
               <a href="https://x.com/?lang=ua" target="_blank">
-                <img src="./images/twitter.png" alt="icon of twitter" class="icon"/>
+                <img
+                  src="./images/twitter.png"
+                  alt="icon of twitter"
+                  class="icon"
+                />
               </a>
             </li>
-            <li class="icons-item">
+            <li class="icons-item youtube-icon">
               <a href="https://www.youtube.com/" target="_blank">
-                <img src="./images/youtube.png" alt="icon of youtube" class="icon"/>
+                <img
+                  src="./images/youtube.png"
+                  alt="icon of youtube"
+                  class="icon"
+                />
               </a>
             </li>
           </ul>
@@ -129,29 +139,40 @@
           <h2 class="translate-tile">Вчимо мову На’ві</h2>
           <ul class="translate-list">
             <li class="translate-item">
-              <p class="translate-word group1">Привіт</p>
-              <p class="translate-result">Kaltxì</p>
+              <div class="translate-card">
+                <p class="translate-word group1">Привіт</p>
+                <p class="translate-result">Kaltxì</p>
+              </div>
             </li>
             <li class="translate-item">
-              <p class="translate-word group2">Як справи?</p>
-
-              <p class="translate-result">Ngaru lu fpom srak?</p>
+              <div class="translate-card">
+                <p class="translate-word group2">Як справи?</p>
+                <p class="translate-result">Ngaru lu fpom srak?</p>
+              </div>
             </li>
             <li class="translate-item">
-              <p class="translate-word group3">Все добре</p>
-              <p class="translate-result">Lu fpom</p>
+              <div class="translate-card">
+                <p class="translate-word group3">Все добре</p>
+                <p class="translate-result">Lu fpom</p>
+              </div>
             </li>
             <li class="translate-item">
-              <p class="translate-word group1">Дякую</p>
-              <p class="translate-result">Irayo si</p>
+              <div class="translate-card">
+                <p class="translate-word group1">Дякую</p>
+                <p class="translate-result">Irayo si</p>
+              </div>
             </li>
             <li class="translate-item">
-              <p class="translate-word group2">Я бачу тебе</p>
-              <p class="translate-result">Oel ngati kameie</p>
+              <div class="translate-card">
+                <p class="translate-word group2">Я бачу тебе</p>
+                <p class="translate-result">Oel ngati kameie</p>
+              </div>
             </li>
             <li class="translate-item">
-              <p class="translate-word group3">Слідуй за мною!</p>
-              <p class="translate-result">Nong oet!</p>
+              <div class="translate-card">
+                <p class="translate-word group3">Слідуй за мною!</p>
+                <p class="translate-result">Nong oet!</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -169,24 +190,31 @@
     <footer class="footer">
       <div class="container footer-position">
         <a href="/" class="link">
-          <img src="./images/logo.png" alt="logo Avatar" class="logo logo-footer" />
+          <img
+            src="./images/logo.png"
+            alt="logo Avatar"
+            class="logo logo-footer"
+          />
         </a>
         <ul class="contact-list">
           <li class="contact-item">
-            <p class="contact-text">Q&A E-mail</p>
-            <a href="mailto:avatartwowqa@gmail.com" class="contact-link"
+            <p class="contact-text contact-position">Q&A E-mail</p>
+            <div class="vector1"></div>
+            <a href="mailto:avatartwowqa@gmail.com" class="contact-link contact-position"
               >avatartwowqa@gmail.com</a
             >
           </li>
           <li class="contact-item">
             <p class="contact-text">Cooperation E-mail</p>
-            <a href="mailto:avatartwowcoop@gmail.com" class="contact-link">avatartwowcoop@gmail.com</a>
-          </li>
-          <li class="contact-item">
-            <small class="info">©2023 Avatar: The Way Of Water. All rights reserved</small>
+            <div class="vector2"></div>
+            <a href="mailto:avatartwowcoop@gmail.com" class="contact-link"
+              >avatartwowcoop@gmail.com</a
+            >
           </li>
         </ul>
-        
+         <small class="info"
+              >©2023 Avatar: The Way Of Water. All rights reserved</small
+         >
       </div>
     </footer>
   </body>
