--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         <ul class="language-switcher">
           <li class="language-switcher-item">
-            <p class="language-switcher-text">ENG</p>
+            <span class="language-switcher-text">ENG</span>
           </li>
           <li class="language-switcher-item">
             <a href="#">
@@ -53,7 +53,7 @@
             </a>
           </li>
           <li class="language-switcher-item">
-            <p class="language-switcher-text">UA</p>
+            <span class="language-switcher-text">UA</span>
           </li>
         </ul>
     </header>
@@ -188,7 +188,8 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container footer-position">
+      <div class="container ">
+        <div class="footer-position">
         <a href="/" class="link">
           <img
             src="./images/logo.png"
@@ -198,20 +199,19 @@
         </a>
         <ul class="contact-list">
           <li class="contact-item">
-            <p class="contact-text contact-position">Q&A E-mail</p>
-            <div class="vector1"></div>
-            <a href="mailto:avatartwowqa@gmail.com" class="contact-link contact-position"
+            <p class="contact-text">Q&A E-mail</p>
+            <a href="mailto:avatartwowqa@gmail.com" class="contact-link"
               >avatartwowqa@gmail.com</a
             >
           </li>
           <li class="contact-item">
             <p class="contact-text">Cooperation E-mail</p>
-            <div class="vector2"></div>
             <a href="mailto:avatartwowcoop@gmail.com" class="contact-link"
               >avatartwowcoop@gmail.com</a
             >
           </li>
         </ul>
+        </div>
          <small class="info"
               >©2023 Avatar: The Way Of Water. All rights reserved</small
          >
