--- a/engindex.html
+++ b/engindex.html
@@ -74,7 +74,7 @@
               I'm speaking with the warrior! Your spirit goes with Eywa, your
               body stays behind to become part of the People. Fight with us!
             </p>
-            <button class="buttonstyle-join">Приєднатись до клану</button>
+            <button class="buttonstyle-join">Join clan</button>
           </div>
           <ul class="icons-list">
             <li class="icons-item instagram-icon">
@@ -193,7 +193,7 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <div class="footer-content">
+        <div class="footer-position">
           <a href="/" class="link">
             <img
               src="./images/logo.png"
