--- a/engindex.html
+++ b/engindex.html
@@ -85,7 +85,7 @@
                 <img
                   src="./images/inst.png"
                   alt="icon of instagram"
-                  class="icon"
+                  class="icon-inst"
                 />
               </a>
             </li>
@@ -94,7 +94,7 @@
                 <img
                   src="./images/twitter.png"
                   alt="icon of twitter"
-                  class="icon"
+                  class="icon-twitter"
                 />
               </a>
             </li>
@@ -103,7 +103,7 @@
                 <img
                   src="./images/youtube.png"
                   alt="icon of youtube"
-                  class="icon"
+                  class="youtube"
                 />
               </a>
             </li>
