--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                     <input type="email" class="modal-input">
                   </label>
                   <button type="button" class="button-join"> Join clan</button>
+                  </label>
                 </form>
               </div>
             </div>
